kubernetes/apps/restaurant/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: restaurant-service

  labels:
    # Identifierar vilken applikation Service-resursen tillhör.
    app: restaurant-template

spec:
  # Skapar en intern Service-IP.
  # Extern trafik går via Traefik och Ingress.
  type: ClusterIP

  selector:
    # Grundselectorn väljer poddar för restaurant-template.
    # Dev-overlayn lägger dessutom till environment=dev.
    app: restaurant-template

  ports:
    - name: http

      # HTTP-trafiken transporteras över TCP.
      protocol: TCP

      # Porten som Service-resursen lyssnar på.
      port: 80

      # Porten som trafiken skickas vidare till på poddarna.
      targetPort: 80
