kubernetes/apps/restaurant/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: restaurant-ingress

  labels:
    # Identifierar vilken applikation Ingress-resursen tillhör.
    app: restaurant-template

spec:
  # Ingress-resursen hanteras av Traefik.
  ingressClassName: traefik

  rules:
    # Detta är ett generellt grundvärde.
    # Varje miljö ersätter hostnamnet genom sin overlay.
    - host: restaurant.example.local

      http:
        paths:
          # Alla sökvägar som börjar med "/" matchar denna regel.
          # Det innebär att exempelvis "/", "/about" och "/contact"
          # skickas vidare till samma Service.
          - path: /

            # Prefix innebär att alla URL-sökvägar som börjar med
            # det angivna värdet matchar.
            pathType: Prefix

            backend:
              service:
                # Namnet på den Service som Ingress skickar trafiken till.
                # Service-resursen måste finnas i samma namespace
                # som Ingress-resursen, alltså restaurant-dev.
                name: restaurant-service

                port:
                  # Trafiken skickas till port 80 på Service-resursen.
                  # Service-resursen skickar sedan trafiken vidare
                  # till containerporten på rätt pods.
                  number: 80
